Add a little documentation to the libraries/Makefile

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -1,4 +1,15 @@
 
+# To do a fresh build:
+#
+#   make clean
+#   make boot
+#   make
+#
+# To rebuild a particular library <package>:
+#
+#   make clean.library.<package>
+#   make build.library.<package>
+
 .PHONY: default_target
 
 default_target: build
