FIX BUILD Use the right find on Windows systems; fixes bindist creation

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -243,7 +243,7 @@ binary-dist.library.%:
 	ifBuildable/ifBuildable $* cp    setup/Setup   $(BIN_DIST_LIBDIR)/$*/setup
 	ifBuildable/ifBuildable $* cp    $*.cabal      $(BIN_DIST_LIBDIR)/$*
 	ifBuildable/ifBuildable $* cp -a dist          $(BIN_DIST_LIBDIR)/$*
-	ifBuildable/ifBuildable $* find $(BIN_DIST_LIBDIR)/$*/dist \
+	ifBuildable/ifBuildable $* $(FIND) $(BIN_DIST_LIBDIR)/$*/dist \
 	     \( \( -name "*.o" -o -name "*.p_o" \) -a ! -name "HS*" \) \
 	     -exec rm {} \;
 
