Add parallel extralib

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -64,6 +64,7 @@ SUBDIRS += $(wildcard arrows)
 ifeq "$(GhcLibsWithObjectIO)" "YES"
 SUBDIRS += $(wildcard ObjectIO)
 endif
+SUBDIRS += $(wildcard parallel)
 endif
 
 # -----------------------------------------------------------------------------
