--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -827,6 +827,7 @@ ghc_ge_601 = YES
 ghc_ge_602 = YES
 ghc_ge_603 = YES
 ghc_ge_605 = YES
+ghc_ge_607 = YES
 
 else # not UseStage1 or BootingFromHc
 
@@ -842,6 +843,7 @@ ghc_ge_601 = @ghc_ge_601@
 ghc_ge_602 = @ghc_ge_602@
 ghc_ge_603 = @ghc_ge_603@
 ghc_ge_605 = @ghc_ge_605@
+ghc_ge_607 = @ghc_ge_607@
 endif
 
 # Canonicalised ghc version number, used for easy (integer) version
