--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -1014,6 +1014,10 @@ UNAME			= uname
 # GTK+
 GTK_CONFIG = @GTK_CONFIG@
 
+# Set this if you want to use Inno Setup to build a Windows installer
+# when you make a bindist
+ISCC                    =
+
 #-----------------------------------------------------------------------------
 # DocBook XML stuff
 
