--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -350,9 +350,9 @@ GhcRTSWays += debug
 endif
 
 # Want the threaded versions unless we're unregisterised
-ifeq "$(GhcUnregisterised)" "NO"
-GhcRTSWays += thr thr_p thr_debug
-endif
+# Defer the check until later by using $(if..), because GhcUnregisterised might
+# be set in build.mk, which hasn't been read yet.
+GhcRTSWays += $(if $(findstring NO, $(GhcUnregisterised)),thr thr_p thr_debug,)
 
 # Option flags to pass to GHC when it's compiling modules in
 # fptools/libraries.  Typically these are things like -O or
